# nwf-process-geodata

./: .gitignore  NWF_metadata.csv  Private_LICENSE.txt  README.md  output_metadata.csv  pyproject.toml  requirements.txt  setup.py  trimmed_raster.tif.aux.xml  wyoming.geojson
notebooks/: metadata_testing.ipynb  missing_file_testing.ipynb  pdf_testing.ipynb  pipeline_testing.ipynb  process_FEMA.ipynb  process_LOCA_data.ipynb  raster_apis.ipynb  raster_testing.ipynb  s3_testing.ipynb
src/: 01-download.py  02-process.py  03-document.py  clear_bucket.py  common.py  document.py  download.py  export.py  process.py  process_LOCA.py  run.py
